...
                modifier = Modifier.padding(16.dp)
                    .clickable(
                        enabled = searchEnabled
                    ) {
                        onSearchClicked()
                    }
                    .testTag("global-search-button")
            )
        },
        actions = {
            Icon(
                imageVector = Icons.Filled.Settings,
                contentDescription = null,
...
